controllers/samples/controller.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pixiu-gateway-system
  labels:
    control-plane: controller-manager
    app.kubernetes.io/name: pg-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-controller
  namespace: pixiu-gateway-system
  labels:
    app.kubernetes.io/name: pg-controller
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pg-controller
  replicas: 1
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        control-plane: controller-manager
        app.kubernetes.io/name: pg-controller
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - command:
            - /usr/local/bin/pg-controller
        args:
        - --config-path=/config/pg.yaml
        - --log-level=info
        image: mfordjody/pixiugateway-controller:debug
        imagePullPolicy: Always
        name: manager
        ports:
        - containerPort: 8081
          name: health
          protocol: TCP
        - containerPort: 8080
          name: metrics
          protocol: TCP
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - "ALL"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 10m
            memory: 64Mi
      serviceAccountName: pg-controller
      terminationGracePeriodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: pg-controller
  namespace: pixiu-gateway-system
spec:
  selector:
    app.kubernetes.io/name: pg-controller
  ports:
    - name: metrics
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: health
      protocol: TCP
      port: 8081
      targetPort: 8081
